Match icon to text size to prevent page jump

--- a/common/styles/base/_icons.scss
+++ b/common/styles/base/_icons.scss
@@ -8,6 +8,7 @@
 
 .icon--match-text {
   height: 1em;
+  width: 1em;
 }
 
 .icon__canvas {
